api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/description: deployment of code execution engine for SAT project
    app.kubernetes.io/component: deployment
    app.kubernetes.io/name: "piston-api-deployment"
    app.kubernetes.io/part-of: "sat"
  creationTimestamp: null
  labels:
    io.kompose.service: pisont-api-deployment
  name: piston-api-deployment
spec:
  replicas: 
  selector:
    matchLabels:
      io.kompose.service: piston-api
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
      creationTimestamp: null
      labels:
        io.kompose.service: piston-api
    spec:
      containers:
        - image: public.ecr.aws/r8o5c0r9/bb-piston-v2:latest
          name: piston-api
          ports:
            - containerPort: 2000
          resources: {}
          volumeMounts:
            - mountPath: /piston/packages
              name: my-pv
            - mountPath: /piston/jobs
              name: tempfs-0
            - mountPath: /tmp
              name: tempfs-1
      restartPolicy: Always
      volumes:
        - name: my-pv
          persistentVolumeClaim:
            claimName: data-piston
        - emptyDir:
            medium: Memory
          name: tempfs-0
        - emptyDir:
            medium: Memory
          name: tempfs-1
status: {}
