bb-prod.yml
apiVersion: v1
kind: Service
metadata:
  name: blackbuck-prod-backend
spec:
  type: LoadBalancer
  selector:
    app: blackbuck-prod-backend
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackbuck-prod-backend
spec:
  replicas: 15
  selector:
    matchLabels:
      app: blackbuck-prod-backend
  template:
    metadata:
      labels:
        app: blackbuck-prod-backend
    spec:
      containers:
        - name: app
          image: 574252320863.dkr.ecr.ap-south-1.amazonaws.com/blackbuck-prod-backend:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
          volumeMounts:
            - name: tz-config
              mountPath: /etc/localtime
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Kolkata
            type: File
