ingress-sat.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-prod"
  name: skill-sat-ingress
  namespace: sat
spec:
  tls:
    - secretName: web-ssl
      hosts:
        - "satbackend.skill-lync.com"
  rules:
  - host: satbackend.skill-lync.com
    http:
      paths:
      - backend:
          service:
            name: skill-lync-sat-backend
            port:
              number: 80
        path: /
        pathType: Prefix
