piston-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: piston-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: '50m'
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: piston.blackbucks.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: piston-api-service
            port:
              number: 80
